# navigation-assistant

./: .gitignore
nav_assistant_functions/: package.xml  setup.cfg  setup.py
nav_assistant_functions/nav_assistant_functions/: nav_assistant_functions.py
nav_assistant_msgs/: CMakeLists.txt  package.xml
nav_assistant_msgs/action/: NavAssistant.action
nav_assistant_msgs/srv/: MakePlan.srv
navigation_assistant/: CMakeLists.txt  package.xml  plugin_description.xml
navigation_assistant/include/nav_assistant/: nav_assistant.h  set_nav_goal_tool.h  set_point_of_interest_tool.h
navigation_assistant/src/: action_client.py  automatic_navigation_test.py  evaluate_navigation.py  graph_actions.cpp  nav_assistant.cpp  nav_assistant.h  nav_assistant_functions.py  patrol_with_confirmation.py  set_nav_goal_tool.cpp  set_nav_goal_tool.h  set_point_of_interest_tool.cpp  set_point_of_interest_tool.h
navigation_assistant/srv/: MakePlan.srv  NavAssistantPoint.srv  make_plan.srv  nav_assistant_poi.srv  nav_assistant_set_CNP.srv
topology_graph/: CMakeLists.txt  package.xml
topology_graph/include/topology_graph/: ahgraph.h  wrapper.h
topology_graph/include/topology_graph/json/: json.hpp
topology_graph/src/: ahgraph.cpp  wrapper.cpp
topology_graph/srv/: Graph.srv
