<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_assistant_functions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ojedamorala@hotmail.com">pepe</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <build_depend>nav_assistant_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
