<?xml version="1.0"?>
<package format="3">
  <name>navigation_assistant</name>
  <version>0.0.1</version>
  <description>Action Server to assist the robot to reach navigation goals. 
               It works as a wrapper of MobeBase action server, and implements some robustness features to improve navigation success.
               An RVIZ tool is also provided to ease the definition of navigation goals (nodes) and critical navigation goals.
  </description>

  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>topology_graph</build_depend>
  <build_depend>nav_assistant_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <depend>rosidl_default_runtime</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
