<?xml version="1.0"?>
<package>
  <name>topology_graph</name>
  <version>0.0.0</version>
  <description>This pkg builds a graph representation of the rooms in the environment from its JSON representation.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>


  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
